Cleaned up several of the PMD warnings/errors.
git-svn-id: svn://svn.syncleus.com/dANN/trunk@381 6ae8b97b-f314-0410-8212-aecf10b92ded